# DiffCpp

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  diff.cpp  diffCpp.sln  diffCpp.vcxproj
.github/: release.yml
.github/workflows/: blockTest.yml  build.yml  buildTest.yml  buildTest_Linux.yml  buildTest_Windows.yml  code-review.yml  codebase.yml  release.yml  testing.yml  unitTest.yml
dev/bench/: data.js
include/: Doxyfile  annotated.html  classDiffSession-members.html  classDiffSession.html  classes.html  diff.h  diff_8h_source.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html
include/search/: all_0.js  classes_0.js  functions_0.js  searchdata.js
performance/: CMakeLists.txt  DiffBenchmark.cpp
src/: CMakeLists.txt  diff.cpp  main.cpp
test/: AllTests.cpp  CMakeLists.txt  DiffCppTest.cpp
test/BlockTests/TestCase1/: ExpectedResults.txt
test/BlockTests/TestCase4/: ExpectedResults.txt  Input2.txt
test/BlockTests/TestCase5/: ExpectedResults.txt
test/TestCases/TestCase1/: ExpectedResults.txt  Input1.txt
test/TestCases/TestCase2/: ExpectedResults.txt  Input1.txt  Input2.txt
test/TestCases/TestCase3/: ExpectedResults.txt  Input1.txt  Input2.txt
test/TestCases/TestCase4/: Input1.txt
test/TestCases/TestCase5/: Input1.txt  Input2.txt
test/UnitTests/TestCase1/: ExpectedResults.txt  Input.txt
test/UnitTests/TestCase2/: ExpectedResults.txt
